attempt to fix footer on mobile

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -85,10 +85,13 @@ body {
 
 footer {
     /* To make page 100vh, turn off the footer position sticky and turn on absolute then style the footer based on route. */
-    /* position: absolute;
-  position: sticky;
+    position: absolute;
+  /* position: sticky; */
   right: 0;
- bottom: 0; */
+ bottom: 0;
+ left: 0;
+ right: 0;
+ width: 100%;
     margin-top: auto;
 }
 
